# BootBoot

./: README.md
bootboot/: .clang-format  CMakeLists.txt
bootboot/cmake/: arm-none-eabi.cmake  stm32f4.cmake
bootboot/config/: bootboot_config.h
bootboot/include/: memory_map.h
bootboot/linker/: common_regions.ld  stm32f446.ld
